fix: enable page scrolling by removing overflow-hidden

--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,7 @@
 
 @layer base {
   body {
-    @apply bg-slate-50 text-slate-900 antialiased font-sans m-0 h-full overflow-hidden;
+    @apply bg-slate-100 text-slate-900 antialiased font-sans m-0 h-full overflow-hidden flex justify-center items-center;
   }
 }
 
